<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:background="@color/bg_profil_blue"
        android:paddingTop="10dp">
        
        <ImageButton
			android:id="@+id/imageButtonRetour"
			android:layout_marginLeft="5dp"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:src="@drawable/flecheretour"
			android:background="@null" />

        <TextView
            android:id="@+id/textViewPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageButtonRetour"
            android:layout_centerHorizontal="true"
            android:text="A propos"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
    
	<ScrollView 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:scrollbars = "vertical">
    
		<RelativeLayout
	        android:id="@+id/relativeLayoutPrincipal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginLeft="5dp"
	        android:layout_marginRight="5dp">
	        
		    <!-- But  -->
			<TextView 
	       		android:id="@+id/editTextTitleGoal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:textColor="@color/text_blue"
	            android:layout_marginTop="10dp"
	            android:layout_marginStart="10dp"
	            android:text="@string/titleGoal"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
			
			<TextView 
	       		android:id="@+id/editTextTextGoal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTitleGoal"
	            android:gravity="right"
	            android:text="@string/textGoal"/>
			
			<!-- CreateEvent  -->
			<TextView 
	       		android:id="@+id/editTextTitleCreateEvent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTextGoal"
	            android:layout_centerHorizontal="true"
	            android:textColor="@color/text_blue"
	            android:layout_marginTop="10dp"
	            android:layout_marginStart="10dp"
	            android:text="@string/titleCreateEvent"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
			
			<TextView 
	       		android:id="@+id/editTextTextCreateEvent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTitleCreateEvent"
	            android:text="@string/textCreateEvent" />
			
			<!-- ComingEvent  -->
			<TextView 
	       		android:id="@+id/editTextTitleComingEvent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTextCreateEvent"
	            android:layout_centerHorizontal="true"
	            android:textColor="@color/text_blue"
	            android:layout_marginTop="10dp"
	            android:layout_marginStart="10dp"
	            android:text="@string/titleComingEvent"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
			
			<TextView 
	       		android:id="@+id/editTextTextComingEvent"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTitleComingEvent"
	            android:text="@string/textComingEvent" />
			
			<!-- NearFriends  -->
			<TextView 
	       		android:id="@+id/editTextTitleNearFriends"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTextComingEvent"
	            android:layout_centerHorizontal="true"
	            android:textColor="@color/text_blue"
	            android:layout_marginTop="10dp"
	            android:layout_marginStart="10dp"
	            android:text="@string/titleNearFriends"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
			
			<TextView 
	       		android:id="@+id/editTextTextNearFriends"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTitleNearFriends"
	            android:text="@string/textNearFriends" />
			
			<!-- Friends  -->
			<TextView 
	       		android:id="@+id/editTextTitleFriends"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTextNearFriends"
	            android:layout_centerHorizontal="true"
	            android:textColor="@color/text_blue"
	            android:layout_marginTop="10dp"
	            android:layout_marginStart="10dp"
	            android:text="@string/titleFriends"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
			
			<TextView 
	       		android:id="@+id/editTextTextFriends"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTitleFriends"
	            android:text="@string/textFriends"/>
			
			<!-- Profil  -->
			<TextView 
	       		android:id="@+id/editTextTitleProfil"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTextFriends"
	            android:layout_centerHorizontal="true"
	            android:textColor="@color/text_blue"
	            android:layout_marginTop="10dp"
	            android:layout_marginStart="10dp"
	            android:text="@string/titleProfil"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
			
			<TextView 
	       		android:id="@+id/editTextTextProfil"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/editTextTitleProfil"
	            android:text="@string/textProfil" />
			

		</RelativeLayout>   
	</ScrollView>
</LinearLayout>
